# s_style_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NEXT_PHASE_PLAN.md  README.md  README_EN.md  SYSTEM_REVIEW_AND_ROADMAP.md  development_with_logging.md  example_tui_debug_usage.py  hello.py  main.py  mcp.json.example  mypy.ini  pyproject.toml  test_async_evaluator.py  test_expandable_simple.py  test_integration.py  test_local_llm.py  test_mcp_integration_final.py  test_tui_debug_logging.py  test_tui_expandable.py  test_unhashable_fix.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: s-style-agent-implementation-summary.md  s-style-agent-project-overview.md
concept/: S式エージェントシステム設計ドキュメント.md  evaluator.py  llm_agent.py  main.py  parser.py
docs/: README_languages.md
s_style_agent/: __init__.py
s_style_agent/api/: __init__.py  client.py  models.py  server.py
s_style_agent/cli/: __init__.py  main.py
s_style_agent/config/: __init__.py  settings.py
s_style_agent/core/: __init__.py  agent_service.py  async_evaluator.py  evaluator.py  parser.py  schema_validator.py  tool_executor.py  trace_logger.py
s_style_agent/mcp/: __init__.py  config.py  manager.py  robust_client.py  server_manager.py  tool_registry.py
s_style_agent/schema/: s_expression_schema.json
s_style_agent/tests/: README.md  __init__.py  conftest.py  test_actual_search.py  test_agent_service.py  test_auto_init_cli.py  test_cli_extraction.py  (+20 more)
scripts/: start_api_server.py
(+17 files in other folders)
